--- a/app/views/layouts/_review_form.html.erb
+++ b/app/views/layouts/_review_form.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_for [@product, @review] do |f| %>
   <%= f.label :rating, "Your Rating" %>
-  <%= f.range_field :rating, in :1..5 %>
+  <%= f.range_field :rating, in: 1..5 %>
   <%= f.label :author, "Your Name" %>
   <%= f.text_field :author %>
-  <%= f.label :content_body, "Review Text" %>
+  <%= f.label :content_body, "Review" %>
   <%= f.text_area :content_body %>
   <p><%= f.submit %></p>
 <% end %>
