--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,26 +1,26 @@
 <h1><%= @product.name %></h1>
-<h3>Country of Origin: <%= @product.country_of_origin %></h3>
-<h3>Cost per unit: $<%= @product.cost %></h3>
+<h3>Planet of Origin: <%= @product.country_of_origin %></h3>
+<h3>Cost per unit in Imperial Solari: ☼<%= @product.cost %></h3>
 
 <% if @product.reviews.any? %>
-  <h4>Here are the reviews for this product:</h4>
+  <h4>Here are the reviews for this spice:</h4>
 
   <% @product.reviews.each do |review| %>
     <ul>
       <li>
-        <%= link_to review.name, product_review_path(@product, review) %>
+        <%= link_to review.author + " - " + review.rating.to_s + " stars", product_review_path(@product, review) %>
       </li>
     </ul>
   <% end %>
 <% else %>
-  <p>No reviews are listed for this product.</p>
+  <p>No reviews are listed for this spice.</p>
 <% end %>
 
-<p><%= link_to "Add a review", new_product_rewiew_path(@product) %></p>
+<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
 <p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete product", product_path(@product),
-                        :data => {:confirm => "Are you sure?",
+<p><%= link_to "Delete spice", product_path(@product),
+                        :data => {:confirm => "The Maker may be angry, are you sure?",
                                        :method => "delete"} %></p>
 
-<p><%= link_to "Return to products", products_path %></p>
+<p><%= link_to "Return to Spices", products_path %></p>
