--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome!</h1>
 <h2>Muad'Dib has provided only the best Spices from Arrakis and throughout the Galaxy since 10191 A.G.</h2>
-<h3><em>"He who controls the spice controls the universe."</em</h3>
+<h3><em>"He who controls the spice controls the universe."</em></h3>
 <% if @products_most_recent.any? %>
   <h5>Freshest Spices! (most recently added)</h5>
   <ul>
