--- a/app/views/layouts/_review_form.html.erb
+++ b/app/views/layouts/_review_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for [@product, @review] do |f| %>
   <%= f.label :rating, "Your Rating" %>
-  <%= f.range_field :rating, in: 1..5 %>
+  <%= f.number_field :rating, in: 1..5, step: 1 %>
   <%= f.label :author, "Your Name" %>
   <%= f.text_field :author %>
   <%= f.label :content_body, "Review" %>
