--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,13 @@
   <a class="navbar-brand" href="/">MuadDib's Spice Emporium</a>
   <div id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+    <% if current_user %>
+      <li class="nav-item"><%= current_user.email %></li>
+      <li class="nav-item"><%= link_to "Sign out", '/signout' %></li>
+    <% else %>
+      <li class="nav-item"><%= link_to "Sign up", 'signup' %></li>
+      <li class="nav-item"><%= link_to "Sign in", '/signin' %></li>
+    <% end %>
       <li class="nav-item">
         <%= link_to "All Spices", products_path, class: "nav-item nav-link mx-3" %>
       </li>
