--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,10 @@
     <ul class="navbar-nav mr-auto">
     <% if current_user %>
       <li class="nav-item"><%= current_user.email %></li>
-      <li class="nav-item"><%= link_to "Sign out", '/signout' %></li>
+      <li class="nav-item"><%= link_to "Sign out", '/sign_out', :method => :delete %></li>
     <% else %>
-      <li class="nav-item"><%= link_to "Sign up", 'signup' %></li>
-      <li class="nav-item"><%= link_to "Sign in", '/signin' %></li>
+      <li class="nav-item"><%= link_to "Sign up", '/sign_up' %></li>
+      <li class="nav-item"><%= link_to "Sign in", '/sign_in' %></li>
     <% end %>
       <li class="nav-item">
         <%= link_to "All Spices", products_path, class: "nav-item nav-link mx-3" %>
