--- a/app/views/layouts/_product_form.html.erb
+++ b/app/views/layouts/_product_form.html.erb
@@ -7,5 +7,8 @@
   <%= f.text_field :country_of_origin %>
   <%= f.label :cost, "Cost in Imperial Solari ☼" %>
   <%= f.number_field :cost, in: 0..999999.99, step: 0.01 %>
+  <%= f.label :featured, "Product is featured?" %>
+  <%= f.check_box :featured %>
+  
   <%= f.submit %>
 <% end %>
