--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,12 +2,9 @@
 <h3>Planet of Origin: <%= @product.country_of_origin %></h3>
 <h3>Cost per unit in Imperial Solari: <%= number_to_currency(@product.cost, unit: "☼") %></h3>
 <% if @average_review.any? %>
-  <h5>The average reviews are: </h5>
-  <% @average_review.each do |product| %>
-    <%= link_to review.author, product_path(product)%>
-  <% end %>
-<% else %>
-  <p>No reviewed spices to display.</p>
+  <h5>The average review for this product is:
+  <%= @average_review[@product.id] %>
+  </h5>
 <%end%>
 
 <% if @product.reviews.any? %>
