--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
 <h3>Cost per unit in Imperial Solari: <%= number_to_currency(@product.cost, unit: "☼") %></h3>
 <% if @average_review.any? %>
   <h5>The average review for this product is:
-  <%= @average_review[@product.id] %>
+  <%= @average_review[@product.id].round(1) %>
   </h5>
 <% end %>
 
