--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,9 +1,11 @@
 <h2><%= @product.name %></h2>
 
 <h3>Review:</h3>
-<p><%= @review.rating %> Stars</p>
-<p><%= @review.content_body %></p>
-<p>By <%= @review.author %> on <%= @review.created_at.strftime("%b %d, %Y") %></p>
+<div class="review-block">
+  <p><%= @review.rating %> Stars</p>
+  <q class="review"><%= @review.content_body %></q>
+  <p class="byline">By <%= @review.author %> on <%= @review.created_at.strftime("%b %d, %Y") %></p>
+</div>
 
 <% if current_user && current_user.admin %>
   <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
