--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <div id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     <% if current_user %>
-      <li class="nav-item"><%= current_user.email %></li>
+      <li class="nav-item"><%= link_to current_user.email, '/users' %></li>
       <li class="nav-item"><%= link_to "Sign out", '/users/sign_out', :method => :delete %></li>
     <% else %>
       <li class="nav-item"><%= link_to "Sign up", '/users/sign_up' %></li>
